# mb

./: .env.example  .gitignore  01_DATABASE_INTEGRITY_AND_CONCURRENCY.md  03_API_CONTRACTS_AND_ERROR_TAXONOMY.md  README.md  docker-compose.yml  mitlist_tests_output.txt  pyproject.toml  refined_data_model (1).md  setup.md  test_gov.py  tests_output.txt
.Jules/: palette.md  sentinel.md
.jules/: bolt.md  palette.md  sentinel.md
alembic/: env.py
docs/: 05_OBSERVABILITY_AND_OPERATIONS.md  CLAUDE.md
mitlist/: Dockerfile  __init__.py  main.py
mitlist-client/: .env.example  Dockerfile  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
mitlist/api/: deps.py  (+3 more)
stride-client/: .env.example  Dockerfile  README.md  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
tests/: __init__.py  conftest.py  test_audit_report.py  test_auth.py  test_auth_core_security_iat.py  test_auth_security.py  test_auth_security_iat.py  test_auth_security_jwks.py  test_auth_takeover.py  test_chore_assignments_perf.py  test_chore_dependencies_performance.py  test_chore_history_perf.py  test_chore_indexes.py  test_chores_performance.py  test_config_security.py  test_deps_security.py  test_documents_fix.py  test_documents_security.py  test_finance.py  test_finance_security.py  test_gamification_performance.py  test_inventory_performance.py  test_list_query_performance.py  test_lists_performance.py  test_lists_security.py  test_notifications_opt.py  test_security_config.py  test_security_headers.py  test_security_input_limits.py  test_validation_security.py  (+1 more)
(+283 files in other folders)
